  . Fixed buggy counting of affected rows when using the text protocol. The
    collected statistics were wrong when multi_query was used with mysqlnd.
	(Andrey)

- OpenSSL extension:
  . Implemented FR #53447 (Cannot disable SessionTicket extension for servers
    that do not support it) by adding a no_ticket SSL context option. (Adam,
    Tony)

- PDO Oracle driver:
  . Fixed bug #39199 (Cannot load Lob data with more than 4000 bytes on
    ORACLE 10). (spatar at mail dot nnov dot ru)
    
- PDO PostgreSQL driver:
  . Fixed bug #53517 (segfault in pgsql_stmt_execute() when postgres is down).
    (gyp at balabit dot hu)

- Phar extension:
  . Fixed bug #53541 (format string bug in ext/phar).
    (crrodriguez at opensuse dot org, Ilia)

- PHP-FPM SAPI:
  . Fixed bug #53527 (php-fpm --test doesn't set a valuable return value). (fat)

- SOAP extension:
  . Fixed possible crash introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)

- SPL extension:
  . Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0
    values). (Felipe)
    
- SQLite extension:
  . Fixed memory leaked introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)

- Streams:
  . Implemented FR #26158 (open arbitrary file descriptor with fopen). (Gustavo)

- XSL extension:
  . Fixed memory leaked introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)

- Zip extension:
  . Added the filename into the return value of stream_get_meta_data(). (Hannes)
  . Fixed bug #53568 (swapped memset arguments in struct initialization).
    (crrodriguez at opensuse dot org)
  . Fixed bug #53579 (stream_get_contents() segfaults on ziparchive streams) (Hannes)

09 Dec 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Security enhancements:
  . Fixed crash in zip extract method (possible CWE-170). 
    (Maksymilian Arciemowicz, Pierre)